gatter in GameBoardController to test move function, walkOver and landOn Goal #22 #27 #109, turn over closes #53